--- a/contact/styles.css
+++ b/contact/styles.css
@@ -52,6 +52,25 @@ p {
     /* Fill remaining space */
 }
 
+@media screen and (max-width: 1000px) {
+    .footer-content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-section {
+        margin-bottom: 20px;
+        /* Add some space between stacked elements */
+    }
+
+    .footer-content .h3 {
+        text-align: center;
+    }
+
+    .footer h3 {
+        text-align: center;
+    }
+}
 
 
 .top-bar {
